<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        style="@style/Toolbar"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/guillotine_hamburger"
            style="@style/ImageView.Hamburger"
            android:src="@drawable/back_arrow" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



        <LinearLayout
            android:id="@+id/std_map"
            android:onClick="std_map"
        style="@style/LinearLayout.GuillotineItem"
        android:layout_marginTop="@dimen/guillotine_medium_margin">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:src="@drawable/house" />

        <com.example.digitalforgeco.widget.CanaroTextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/home" />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/silver_map"
        style="@style/LinearLayout.GuillotineItem"
        android:layout_marginTop="@dimen/guillotine_medium_margin"
        android:onClick="silver_map">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:src="@drawable/map_icon" />

        <com.example.digitalforgeco.widget.CanaroTextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/Silver_map" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/retro_map"
        style="@style/LinearLayout.GuillotineItem"
        android:layout_marginTop="@dimen/guillotine_medium_margin"
        android:onClick="retro_map">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:src="@drawable/map_icon" />

        <com.example.digitalforgeco.widget.CanaroTextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/Retro_map" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/dark_map"
        style="@style/LinearLayout.GuillotineItem"
        android:layout_marginTop="@dimen/guillotine_medium_margin"
        android:onClick="dark_map">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:src="@drawable/map_icon" />

        <com.example.digitalforgeco.widget.CanaroTextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/Dark_map" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/night_map"
        style="@style/LinearLayout.GuillotineItem"
        android:layout_marginTop="@dimen/guillotine_medium_margin"
        android:onClick="night_map">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:src="@drawable/map_icon" />

        <com.example.digitalforgeco.widget.CanaroTextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/Night_map" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/aubergine_map"
        style="@style/LinearLayout.GuillotineItem"
        android:layout_marginTop="@dimen/guillotine_medium_margin"
        android:onClick="aubergine_map">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:src="@drawable/map_icon" />

        <com.example.digitalforgeco.widget.CanaroTextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/Aubergine_map" />
    </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>